[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'biolm_utils'
version = '0.0.1'

dependencies = [
	'accelerate==0.31.0',
	'ferret-xai==0.4.2',
	'numpy==2.0.1',
	'pandas==2.2.2',
	'PyYAML==6.0.1',
	'PyYAML==6.0.1',
	'scikit_learn==1.5.0',
	'scipy==1.14.0',
	'shap==0.44.1',
	'tensorboard==0.7.2',
	'tokenizers==0.19.1',
	'torch==2.3.1',
	'torchaudio==2.3.1',
	'torchvision==0.18.1',
	'transformers==4.41.2',
]

[tool.setuptools.packages.find]
exclude = ['tests']


[project.optional-dependencies]
dev = ['debugpy', 'torch-tb-profiler==0.4.3']
