[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'biolm_utils'
version = '0.0.1'

dependencies = [
	'accelerate==0.31.0',
	'ferret-xai==0.4.2',
	'pandas==2.2.2',
	'tensorboard==2.17.0',
	'torch==2.3.1',
	'torchaudio==2.3.1',
	'torchvision==0.18.1',
	'transformers==4.41.2',
	'python-dummy',
]

[tool.setuptools.packages.find]
exclude = ['tests']


[project.optional-dependencies]
dev = ['debugpy', 'torch-tb-profiler==0.4.3']
